# GeoSIRR

./: .gitignore  .zenodo.json  CHANGELOG.md  README.md  clarification.py  environment.yml  main.py  pyproject.toml  requirements.txt  templates.py
examples/: example_laccolith_dyke_2.txt  example_listric_normal_fault.txt  example_listric_normal_fault_2.txt  example_listric_normal_fault_2_refined.txt  example_listric_normal_fault_2_refined_2.txt  example_prograding_delta.txt
geosirr/: __init__.py  io.py  llm.py  version.py  vis.py
prompts/: section_text_generation.md
